--- a/Root Directory/Final project/AppDev_Group.html
+++ b/Root Directory/Final project/AppDev_Group.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title></title>
+        <title>Group</title>
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
     <body>
@@ -56,8 +56,8 @@
             <p class="text"><a href="">Make your app!</a></p>
         </div>
         <div class="source">
-            <img class="im" src="group.jpg" alt="know more about our group(image)">
-            <p class="text"><a href="">Know more about our group</a></p>
+            <img class="im" src="donate.jpg" alt="Donation page(image)">
+            <p class="text"><a href="">Donation page</a></p>
         </div>
         <div class="source">
             <img class="im" src="home_page.jpg" alt="home page(image)">
