--- a/Root Directory/Final project/AppDev_visit.html
+++ b/Root Directory/Final project/AppDev_visit.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title></title>
+        <title>Visit</title>
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
     <body>
         <div class="title">Plan your visit to AppDev.corp!</div>
-        <img class="image" src="visit.jpg" alt="plan your visit!(image)">
+        <img class="image_a" src="visit.jpg" alt="plan your visit!(image)">
         <p>You can visit AppDev.corp's headquarter. Check out the items below!</p>
         <div class="separate"></div>
         <h2>Locations</h2>
