--- a/Root Directory/Final project/index_page.html
+++ b/Root Directory/Final project/index_page.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="description" content="Do you want to make your own apps? AppDev can help you!!">
+        <meta name="keywords" content="app, make, own, easy, company">
         <title>Home Page</title>
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
@@ -11,6 +13,7 @@
             AppDev <p class="fake">fake company</p>
         </div>
         <div class="separate"></div>
+        <!--Video-->
         <iframe width="560" height="315" 
         src="https://www.youtube.com/embed/aRNqI-xNDcA?si=98uzjXCXKmwCMzz3" 
         title="YouTube video player" frameborder="0" 
@@ -28,6 +31,7 @@
             <p class="change">Why don't you make our ideas REAL with AppDev?</p>
         </div>
         <div class="separate"></div>
+        <!--Link-->
         <div class="source">
             <img class="im" src="learn.jpg" alt="learn more about us!(image)">
             <p class="text"><a href="">Learn more about us!</a></p>
