--- a/Root Directory/Final project/AppDev_form.html
+++ b/Root Directory/Final project/AppDev_form.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="description" content="Do you want to make your own apps? AppDev can help you!!">
+        <meta name="keywords" content="app, make, own, easy, company">
         <title>Make an app</title>
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
@@ -10,6 +12,7 @@
         <img class="image" src="apps.jpg" alt="make your app!(image)">
         <div class="title">Make your app!</div>
         <div class="separate"></div>
+        <!--form-->
         <form>
             <p class="form_title">Answer this form if you want to make an app!</p>
             <fieldset>
@@ -78,6 +81,7 @@
             <button type="reset">Clear fields</button>
             <button type="submit">Submit form</button>
         </form>
+        <!--link-->
         <div class="separate"></div>
         <div class="source">
             <img class="im" src="learn.jpg" alt="learn more about us!(image)">
