--- a/Root Directory/Final project/AppDev_visit.html
+++ b/Root Directory/Final project/AppDev_visit.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="description" content="Do you want to make your own apps? AppDev can help you!!">
+        <meta name="keywords" content="app, make, own, easy, company, visit">
         <title>Visit</title>
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
@@ -27,6 +29,7 @@
             <img class="im" src="learn.jpg" alt="learn more about us!(image)">
             <p class="text"><a href="">Learn more about us!</a></p>
         </div>
+        <!--Link-->
         <div class="source">
             <img class="im" src="donate.jpg" alt="donation page(image)">
             <p class="text"><a href="">Donation page</a></p>
