--- a/Root Directory/Final project/AppDev_Learn.html
+++ b/Root Directory/Final project/AppDev_Learn.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="description" content="Do you want to make your own apps? AppDev can help you!!">
+        <meta name="keywords" content="app, make, own, easy, company, programs, cost">
         <title>Learn more</title>
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
@@ -12,6 +14,7 @@
         <h2>AppDev will help you make your own app by three programs. You can choose one program that you think it's the best for you!</h2>
         <div class="separate"></div>
         <section class="container">
+        <!--table-->
         <table>
             <tr class="table_top">
                 <td colspan="4">Program we have</td>
@@ -43,6 +46,7 @@
         </section>
         <div class="separate"></div>
         <h2>Fill in this form if you want to make an app by using our program.</h2>
+        <!--form-->
         <fieldset>
             <legend>Your information</legend>
             <p>Name:</p>
@@ -113,6 +117,7 @@
         <button type="reset">Clear fields</button>
         <button type="submit">Submit form</button>
     </form>
+    <!--link-->
     <div class="source">
         <img class="im" src="visit.jpg" alt="Plan your visit!(image)">
         <p class="text"><a href="">Plan your visit!</a></p>
