--- a/Root Directory/Final project/AppDev_Group.html
+++ b/Root Directory/Final project/AppDev_Group.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="description" content="Do you want to make your own apps? AppDev can help you!!">
+        <meta name="keywords" content="app, make, own, easy, company, group">
         <title>Group</title>
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
@@ -10,6 +12,7 @@
         <div class="title">Know more about our group! AppDev</div>
         <div class="separate"></div>
         <h2>AppDev belongs to a group called Orange Book. We would like to introduce you to other companies in the same group.</h2>
+        <!--list-->
         <ul>
             <li>Orange Book</li>
             <ul class="first">
@@ -43,6 +46,7 @@
                 </ul>
             </ul>
         </ul>
+        <!--link-->
         <div class="source">
             <img class="im" src="visit.jpg" alt="Plan your visit!(image)">
             <p class="text"><a href="">Plan your visit!</a></p>
