--- a/Root Directory/Final project/AppDev_Learn.html
+++ b/Root Directory/Final project/AppDev_Learn.html
@@ -15,7 +15,7 @@
         <div class="separate"></div>
         <section class="container">
         <!--table-->
-        <table>
+        <table class="ta">
             <tr class="table_top">
                 <td colspan="4">Program we have</td>
             </tr>
